# llm-open-data-insee

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled-1.ipynb  app-config.ini  app-minimal.py  app-shiny.py  app.py  app2.py  chainlit.md  dev_app.py  dirag-agent.py  dirag-example.ipynb  embed-data-example.ipynb  entrypoint.sh  exploration-db-building.ipynb  extraction_dirag.py  giskard.ipynb  insee_data_processing.py  minimal-rag-in-notebook.ipynb  pyproject.toml  requirements-api.txt  requirements-app.txt  requirements-dev.txt  requirements.txt  requirements_rag.txt  run_build_database.py  run_evaluation.py  run_pipeline.py  test.py  test_chain.ipynb  test_chain_save_outputs.ipynb  utils.py
.chainlit/: config.toml
app-shiny/: requirements.txt
argo-workflows-templates/: build-database.yml  kill-failed-pods.sh  run-build-database.yml  run-evaluation-mlflow.yml  run-evaluation.yml  run-pipeline.yml
bash/: init.sh  run-pipeline.sh
data/: evaluation_results.csv
deployment/: deployment.yaml  ingress.yaml  service.yaml
dev/: init.sh
doc/: pipeline_embedding.excalidraw.json  statbot-archi.drawio
docker/: Dockerfile_app  Dockerfile_build
legacy/: app-shiny.py  app.py  test.py
notebooks/: 20240508_tests_api.ipynb  RAG_eval_data_generation.ipynb  RAG_eval_evaluation.ipynb  Retrieval_evaluation.ipynb  Untitled-1.ipynb  context_recall.ipynb  dev.ipynb  draft_eval_retrieval.ipynb  embed-data-example.ipynb  label_studio_setup.ipynb  llm_recall.ipynb  retrieval_eval_exp_data_size.ipynb  retrieval_evaluation.ipynb  test_S3DirectoryLoader.ipynb  test_chain.ipynb  test_chain_save_outputs.ipynb  test_update.ipynb
prompt/: question.md  (+4 more)
(+131 files in other folders)
