[project]
name = "llm-open-data-insee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "beautifulsoup4>=4.13.3",
    "bitsandbytes>=0.45.3",
    "chromadb>=0.6.3",
    "confz>=2.1.0",
    "hvac>=2.3.0",
    "jsonlines>=4.0.0",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.9",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.6",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pipreqs>=0.5.0",
    "pyyaml>=6.0.2",
    "ragatouille>=0.0.9",
    "rank-bm25>=0.2.2",
    "ruff>=0.11.0",
    "s3fs>=2025.3.0",
    "scipy>=1.15.2",
    "streamlit>=1.43.2",
    "streamlit-extras>=0.6.0",
    "streamlit-feedback>=0.1.4",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "vllm>=0.7.3",
    "vulture>=2.14",
]


[tool.ruff]
line-length = 120
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = ["notebooks/*"]


[dependency-groups]
dev = [
    "vulture>=2.14",
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
    "ipykernel>=6.29.5",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
#ignore  = ["B024"]

[tool.ruff.format]
indent-style = "space"
